white space issue resolved

--- a/hello_again.css
+++ b/hello_again.css
@@ -4,7 +4,7 @@
     float: right; 
     background-color: white;
     width: 100%;
-    border-bottom: 2px solid #5B2D90;
+    border-bottom: 2px solid ;
     z-index: 2;
 }
 
@@ -17,18 +17,21 @@
   width: 200px;
 }
 
-/*Totaliser on home page*/
+.wrapper {
+    position: relative;
+}
 
 .beaver {
-    position: relative;
+    position: absolute;
     top: 0px;
-    left: 400px;
+    left: 500px;
+    z-index: -2;
 }
 
 .totaliser {
-    position: relative;
-    top: -900px;
-    left: 0px;
+    position: absolute;
+    top: -100px;
+    left: 100px;
 }
 
 .pot {
@@ -125,7 +128,22 @@
     top: 700px;
     left: 250px;
 }
-/*Totaliser on home page*/
+
+.container {
+    position: relative;
+    top: 800px;
+}
+
+header {
+    background-color: #5B2D90;
+    color: yellow;
+    text-align: center;
+    font-family: Blackout-Midnight;
+    font-size: 52px;
+    height: 70px;
+    position: relative;
+    top: 750px;
+}
 
 body {
     font-family: "Helvetica"; 
@@ -154,15 +172,6 @@ li a {
 
 li a:hover {
     background-color: #5B2D90;
-}
-
-header {
-    background-color: #5B2D90;
-    color: yellow;
-    text-align: center;
-    font-family: Blackout-Midnight;
-    font-size: 52px;
-    height: 70px;
 }
 
 h1 {
@@ -198,7 +207,7 @@ p {
 
 footer {
     position: relative;
-    bottom: 0;
+    top: 800px;
     width: 100%;
     height: 50px;
     background-color: #5B2D90;
